# imessage

./: .dockerignore  .gitattributes  .gitignore  .mailmap  AGENTS.md  CLAUDE.md  Dockerfile  Info.plist  Makefile  PR_DOCS.md  README.md  docker-compose.example.yml  go.mod  go.sum
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  codex-review-on-ready.yml  docker-amd64.yml  docker.yml  release.yml  security.yml
cmd/bbctl/: auth.go  main.go  register.go  register_test.go  stop.go
cmd/corten-matrix/: carddav_setup.go  ensure_config.go  fda_darwin.go  fda_other.go  login_cli.go  main.go  meminfo_linux.go  rlimit_unix.go  setup_darwin.go  setup_other.go
cmd/mautrix-imessage/: ensure_config.go  login_cli.go  main.go  main_test.go  meminfo_darwin.go  meminfo_other.go  memlimit.go  rlimit_darwin.go  rlimit_other.go
dev/: windows-bindings.bat  windows-dev-env.bat
docs/: docker.md
imessage/: interface.go  mutation_test.go  struct.go  struct_test.go  tapback.go  tapback_test.go
imessage/mac/: attributedstring.go  contacts.go  contacts_test.go  database.go  debug.go  groups.go  meowAttributedString.h  meowAttributedString.m  meowContacts.h  meowContacts.m  meowMemory.h  meowMemory.m  meowSleep.h  meowSleep.m  messages.go  messages_test.go  send.go  sleepdetect.go
ipc/: ipc.go
nac-validation/: build.rs
nac-validation/src/: lib.rs  validation_data.h  validation_data.m
pkg/bbctl/: auth.go  delete.go  delete_test.go  main.go  register.go  stop.go
pkg/cli/: cli.go  logs_test.go  reset_config.go  reset_test.go  ui.go
pkg/connector/: attachment_retrier.go  audioconvert.go  audioconvert_test.go  bridgeadapter.go  bridgeinfo.go  capabilities.go  capabilities_test.go  carddav_crypto.go  carddav_crypto_test.go  carrier_group_consolidation_test.go  chatdb.go  chatdb_darwin.go  chatdb_guid_refresh.go  chatdb_guid_refresh_test.go  chatdb_test.go  client.go  client_review_fixes_test.go  cloud_backfill_store.go  cloud_backfill_store_test.go  cloud_contacts.go  command_contacts.go  commands.go  config.go  config_test.go  config_upgrade_test.go  connector.go  connector_test.go  contact_display.go  contact_merge.go  contact_merge_test.go  contact_snapshot.go  contact_snapshot_test.go  contacts_local_darwin.go  dbmeta.go  dbmeta_test.go  diskspace_other.go  diskspace_unix.go  example-config.yaml  external_carddav.go  external_carddav_test.go  (+29 more)
pkg/imconfig/: example-config.yaml  imconfig.go  imconfig_test.go
pkg/rustpushgo/: Cargo.toml  build.rs  rustpushgo.go  rustpushgo.h
pkg/rustpushgo/src/: anisette.rs  lib.rs  local_config.rs  statuskit_cloudkit.rs  statuskitgo.rs
rustpush/: build.rs
rustpush/open-absinthe/: Cargo.toml  README.md
rustpush/open-absinthe/src/: nac.rs
rustpush/src/: error.rs
rustpush/src/icloud/: cloudkit.rs  mmcs.proto  mmcs.rs  pcs.rs
rustpush/src/imessage/: aps_client.rs  cloud_messages.rs  messages.rs
scripts/: as-bridge.sh  bootstrap-linux.sh  docker-entrypoint.sh  embed.go  ensure_rustpush_source.py  healthcheck.sh  imessage  imessage-setup.sh  install-beeper-linux.sh  install-beeper.sh  install-imessage.sh  install-linux.sh  install.sh  reset-bridge.sh
tools/: README.md
tools/extract-key/: build.sh
tools/extract-key-app/: Package.swift  build.sh
tools/extract-key-app/Sources/CEncrypt/: shim.c
tools/extract-key-app/Sources/CEncrypt/include/: xnu_encrypt.h
tools/extract-key-app/Sources/ExtractKeyApp/: Compat.swift  ContentView.swift  Enrichment.swift  ExtractKeyApp.swift  HardwareExtractor.swift  IOKitHelpers.swift  Models.swift  SystemInfo.swift
tools/nac-relay-app/: Package.swift  build.sh
tools/nac-relay-app/Sources/NACRelayApp/: AppDelegate.swift  KeyExtractor.swift  LoginItemManager.swift  Models.swift  PopoverView.swift  RelayManager.swift  SystemInfo.swift
