[package]
name = "rustpushgo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "rlib"]
name = "rustpushgo"

[features]
# hardware-key enables open-absinthe (x86 NAC emulator via unicorn-engine).
# Required on Linux; unnecessary on macOS (native AAAbsintheContext is used).
# The Makefile passes --features hardware-key on Linux only.
default = []
hardware-key = ["rustpush/macos-validation-data"]
# Enables CloudKit avid (Live Photo MOV) download paths when the linked
# rustpush fork exposes the required API and record fields.
rustpush-avid-download = []

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
uniffi = { version = "0.25.0", features = ["tokio"] }
pretty_env_logger = "0.5.0"
log = "0.4.20"
rustpush = { path = "../../third_party/rustpush-upstream", default-features = false, features = ["macos-validation-data"] }
# Direct path dep on cloudkit-proto so the `CloudKitRecord` derive macro (which
# emits `cloudkit_proto::*` references in its generated code) can resolve the
# crate name inside our wrapper. Without this, defining a local CloudKitRecord
# type in lib.rs fails to compile because the derive expects the crate to be
# importable by its literal name.
cloudkit-proto = { path = "../../third_party/rustpush-upstream/cloudkit-proto", package = "cloudkit-proto" }
# Direct dep on open-absinthe so the wrapper can call
# `open_absinthe::nac::set_relay_config` from Linux and macOS alike.
# Points to third_party/ — the Makefile applies our overlay from
# rustpush/open-absinthe/ on top after cloning upstream.
open-absinthe = { path = "../../third_party/rustpush-upstream/open-absinthe" }
keystore = { path = "../../third_party/rustpush-upstream/keystore" }
plist = "1.7.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.4.1", features = ["v4"] }
sha2 = "0.10"
sha1 = "0.10"
thiserror = "1.0.47"
async-trait = "0.1.73"
base64 = "0.21"
hex = "0.4"
serde_json = "1.0"
libc = "0.2"
# prost for decoding `mmcsp::AuthorizeGetResponse` in the Ford recovery
# gating check — match upstream's version so cargo feature unification
# resolves cleanly (upstream uses 0.12).
prost = "0.12"
# Crypto deps for the manual Ford download path that implements V1+V2
# Ford decryption at the wrapper layer. Upstream rustpush's `get_mmcs`
# only supports V1 Ford and panics on V2 records (`chunks.item.expect`
# at mmcs.rs:1117), so the wrapper has to perform the download itself
# for Ford-encrypted assets. Versions match upstream rustpush exactly so
# cargo feature unification doesn't double up crates.
aes-siv = "0.7.0"
hkdf = "0.12.4"
aes = "0.8.4"
ctr = "0.9.2"
openssl = "0.10.56"
reqwest = { version = "0.11", features = ["stream", "rustls-tls", "rustls-tls-webpki-roots", "gzip"] }
# Direct dep on rustls 0.23 so we can install the aws-lc-rs CryptoProvider
# at startup. Upstream rustpush pulled in rustls 0.23 (transitively, via the
# packed-APS-encoding refactor) but no provider is auto-installed in 0.23 —
# someone has to call install_default() before the first TLS connection or
# the process panics inside hyper/reqwest. See connect()/new_client().
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs"] }
once_cell = "1"
rand = { version = "0.8.5", features = ["min_const_gen"] }

[target.'cfg(target_os = "macos")'.dependencies]
icloud_auth = { path = "../../third_party/rustpush-upstream/apple-private-apis/icloud-auth", default-features = false }
omnisette = { path = "../../third_party/rustpush-upstream/apple-private-apis/omnisette", default-features = false }
nac-validation = { path = "../../nac-validation" }
# Enable the `native-nac` feature on open-absinthe so its `ValidationCtx`
# delegates to nac-validation (AAAbsintheContext) instead of running the
# unicorn XNU emulator. This preserves the bridge's "Local NAC" behavior
# (native macOS NAC generation, no relay, no emulator) while keeping the
# OSConfig impl as upstream's `rustpush::macos::MacOSConfig`. Cargo unifies
# this dep with rustpush's own path dep on open-absinthe; features are
# additive so the `native-nac` flag propagates into both users.
open-absinthe = { path = "../../third_party/rustpush-upstream/open-absinthe", features = ["native-nac"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
icloud_auth = { path = "../../third_party/rustpush-upstream/apple-private-apis/icloud-auth", default-features = false, features = ["remote-anisette-v3"] }
omnisette = { path = "../../third_party/rustpush-upstream/apple-private-apis/omnisette", default-features = false, features = ["remote-anisette-v3"] }
# WebSocket + datetime + futures adapters for the wrapper-level anisette
# pre-provisioner (see src/anisette.rs). Versions match upstream omnisette
# exactly so cargo feature unification doesn't double up crates.
tokio-tungstenite = { version = "0.20.1", features = ["rustls-tls-webpki-roots"] }
chrono = "0.4.37"
futures-util = "0.3.28"

[build-dependencies]
uniffi = { version = "0.25.0", features = ["build"] }
cc = "1.0"
